Make the nb a bit more organized

--- a/Group project/Project_4.ipynb
+++ b/Group project/Project_4.ipynb
@@ -9,7 +9,7 @@
         "aju8u04MB-Bv"
       ],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyPY/JzNsjyecblkf+j5b1qD",
+      "authorship_tag": "ABX9TyMKCqGqA5ZtRrxyYrx0fhdC",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -35,7 +35,16 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# MuJoCo Set Up"
+        "# Environment"
+      ],
+      "metadata": {
+        "id": "biPskFDRGv_5"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## MuJoCo engine set up"
       ],
       "metadata": {
         "id": "3tRjgyPxl53U"
@@ -97,7 +106,7 @@
         "id": "-Wfi_xhngw0_",
         "outputId": "de6885ab-3386-4555-c599-38f19309ed77"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -124,7 +133,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# Gym and Other Libraries"
+        "## Gym and other libraries"
       ],
       "metadata": {
         "id": "aju8u04MB-Bv"
@@ -159,7 +168,7 @@
         "id": "34yIvql3mAWF",
         "outputId": "a58622da-c3c2-440d-bcc9-ec7fb2b01fa0"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -206,7 +215,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# Define env and visualization"
+        "## Define env and visualization"
       ],
       "metadata": {
         "id": "PPHvddEGRv84"
@@ -223,7 +232,7 @@
       "metadata": {
         "id": "DtS59dk_pq3r"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -255,7 +264,7 @@
       "metadata": {
         "id": "HBTa20V7Cnrw"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -269,13 +278,13 @@
       "metadata": {
         "id": "91r4V__2jfVC"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "markdown",
       "source": [
-        "# Run a random agent to test the env"
+        "## Run a random agent to test the env"
       ],
       "metadata": {
         "id": "BG1Qi55FTUXW"
@@ -306,7 +315,7 @@
       "metadata": {
         "id": "7ZD6OCBgcaBt"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -324,7 +333,7 @@
         "id": "lRg-aK2ZjnF-",
         "outputId": "cf372bd9-ad6a-49a8-8241-a8dcb05914ef"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -338,12 +347,21 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "# Training"
+      ],
+      "metadata": {
+        "id": "q23EscCUG5-f"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [],
       "metadata": {
         "id": "PxCveEDglZzN"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": []
     }
   ]
