Set the default env to FetchReach and increase the gif fps to 30.

--- a/Group project/Project_4.ipynb
+++ b/Group project/Project_4.ipynb
@@ -9,7 +9,7 @@
         "aju8u04MB-Bv"
       ],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyMKCqGqA5ZtRrxyYrx0fhdC",
+      "authorship_tag": "ABX9TyOSJ+1JDFdgNQEyrwLHj6QQ",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -104,9 +104,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "-Wfi_xhngw0_",
-        "outputId": "de6885ab-3386-4555-c599-38f19309ed77"
+        "outputId": "227f4bdc-c1d4-4cdb-ece1-5d279c3dceed"
       },
-      "execution_count": null,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "stream",
@@ -166,9 +166,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "34yIvql3mAWF",
-        "outputId": "a58622da-c3c2-440d-bcc9-ec7fb2b01fa0"
+        "outputId": "2d455709-7792-4c0a-d378-85d75f037ea8"
       },
-      "execution_count": null,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "stream",
@@ -224,30 +224,27 @@
     {
       "cell_type": "code",
       "source": [
-        "PUSH = \"FetchPush-v3\"\n",
-        "SLIDE = \"FetchSlide-v3\"\n",
-        "REACH = \"FetchReach-v3\"\n",
-        "PICK_AND_PLACE = \"FetchPickAndPlace-v3\""
+        "REACH = \"FetchReach-v3\" # easiest one, arm reaches to a point\n",
+        "PICK_AND_PLACE = \"FetchPickAndPlace-v3\" # hardest one, arm reaches for the block, grabs it, reaches to a point"
       ],
       "metadata": {
         "id": "DtS59dk_pq3r"
       },
-      "execution_count": null,
+      "execution_count": 11,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "def create_env(env_name):\n",
+        "def create_env(env_name=\"FetchReach-v3\"):\n",
         "    \"\"\"Creates and returns a Gymnasium environment.\n",
         "\n",
         "    Args:\n",
-        "        env_name (string): The name of the environment to create.\n",
-        "        Valid options are:\n",
-        "            - \"FetchPush-v3\"\n",
-        "            - \"FetchSlide-v3\"\n",
-        "            - \"FetchReach-v3\"\n",
-        "            - \"FetchPickAndPlace-v3\"\n",
+        "        env_name (string, optional): The name of the environment to create.\n",
+        "            Defaults to: \"FetchReach-v3\"\n",
+        "            Valid options are:\n",
+        "                - \"FetchReach-v3\"\n",
+        "                - \"FetchPickAndPlace-v3\"\n",
         "\n",
         "    Returns:\n",
         "        gym.Env: The created Gymnasium environment.\n",
@@ -264,13 +261,13 @@
       "metadata": {
         "id": "HBTa20V7Cnrw"
       },
-      "execution_count": null,
+      "execution_count": 12,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "def save_gif(frames, filename=\"fetch.gif\", fps=10):\n",
+        "def save_gif(frames, filename=\"fetch.gif\", fps=30):\n",
         "    \"\"\"Save frames as a GIF.\"\"\"\n",
         "    imageio.mimsave(filename, frames, fps=fps)\n",
         "    print(f\"Saved animation to {filename}\")"
@@ -278,7 +275,7 @@
       "metadata": {
         "id": "91r4V__2jfVC"
       },
-      "execution_count": null,
+      "execution_count": 13,
       "outputs": []
     },
     {
@@ -315,14 +312,14 @@
       "metadata": {
         "id": "7ZD6OCBgcaBt"
       },
-      "execution_count": null,
+      "execution_count": 14,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
         "# Run everything\n",
-        "env = create_env(PUSH)\n",
+        "env = create_env()\n",
         "frames = run_random_actions(env, steps=1000)\n",
         "save_gif(frames)"
       ],
@@ -331,15 +328,15 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "lRg-aK2ZjnF-",
-        "outputId": "cf372bd9-ad6a-49a8-8241-a8dcb05914ef"
+        "outputId": "4461f477-2168-4f38-ea77-ea47cb82358b"
       },
-      "execution_count": null,
+      "execution_count": 15,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Observation space: Dict('achieved_goal': Box(-inf, inf, (3,), float64), 'desired_goal': Box(-inf, inf, (3,), float64), 'observation': Box(-inf, inf, (25,), float64))\n",
+            "Observation space: Dict('achieved_goal': Box(-inf, inf, (3,), float64), 'desired_goal': Box(-inf, inf, (3,), float64), 'observation': Box(-inf, inf, (10,), float64))\n",
             "Action space: Box(-1.0, 1.0, (4,), float32)\n",
             "Saved animation to fetch.gif\n"
           ]
@@ -361,7 +358,7 @@
       "metadata": {
         "id": "PxCveEDglZzN"
       },
-      "execution_count": null,
+      "execution_count": 15,
       "outputs": []
     }
   ]
