Fix the undefined env_name + refactoring

--- a/Group project/Project_4.ipynb
+++ b/Group project/Project_4.ipynb
@@ -9,7 +9,7 @@
         "aju8u04MB-Bv"
       ],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyOl6/EAsjSE4GML+rMoLrYQ",
+      "authorship_tag": "ABX9TyPVnr4sorIRsqPgf3B7+Kd/",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -104,9 +104,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "-Wfi_xhngw0_",
-        "outputId": "227f4bdc-c1d4-4cdb-ece1-5d279c3dceed"
+        "outputId": "13e521ee-1c82-45db-b356-8c98a1229370"
       },
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
@@ -114,9 +114,9 @@
           "text": [
             "Requirement already satisfied: mujoco in /usr/local/lib/python3.11/dist-packages (3.1.6)\n",
             "Requirement already satisfied: absl-py in /usr/local/lib/python3.11/dist-packages (from mujoco) (1.4.0)\n",
-            "Requirement already satisfied: etils[epath] in /usr/local/lib/python3.11/dist-packages (from mujoco) (1.12.0)\n",
+            "Requirement already satisfied: etils[epath] in /usr/local/lib/python3.11/dist-packages (from mujoco) (1.12.2)\n",
             "Requirement already satisfied: glfw in /usr/local/lib/python3.11/dist-packages (from mujoco) (2.8.0)\n",
-            "Requirement already satisfied: numpy in /usr/local/lib/python3.11/dist-packages (from mujoco) (1.26.4)\n",
+            "Requirement already satisfied: numpy in /usr/local/lib/python3.11/dist-packages (from mujoco) (2.0.2)\n",
             "Requirement already satisfied: pyopengl in /usr/local/lib/python3.11/dist-packages (from mujoco) (3.1.9)\n",
             "Requirement already satisfied: fsspec in /usr/local/lib/python3.11/dist-packages (from etils[epath]->mujoco) (2024.10.0)\n",
             "Requirement already satisfied: importlib_resources in /usr/local/lib/python3.11/dist-packages (from etils[epath]->mujoco) (6.5.2)\n",
@@ -173,32 +173,32 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "34yIvql3mAWF",
-        "outputId": "2d455709-7792-4c0a-d378-85d75f037ea8"
+        "outputId": "27e6fa92-efde-4483-c552-d2e73e61e545"
       },
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Requirement already satisfied: gymnasium in /usr/local/lib/python3.11/dist-packages (1.0.0)\n",
-            "Requirement already satisfied: numpy>=1.21.0 in /usr/local/lib/python3.11/dist-packages (from gymnasium) (1.26.4)\n",
+            "Requirement already satisfied: gymnasium in /usr/local/lib/python3.11/dist-packages (1.1.1)\n",
+            "Requirement already satisfied: numpy>=1.21.0 in /usr/local/lib/python3.11/dist-packages (from gymnasium) (2.0.2)\n",
             "Requirement already satisfied: cloudpickle>=1.2.0 in /usr/local/lib/python3.11/dist-packages (from gymnasium) (3.1.1)\n",
             "Requirement already satisfied: typing-extensions>=4.3.0 in /usr/local/lib/python3.11/dist-packages (from gymnasium) (4.12.2)\n",
             "Requirement already satisfied: farama-notifications>=0.0.1 in /usr/local/lib/python3.11/dist-packages (from gymnasium) (0.0.4)\n",
             "Requirement already satisfied: gymnasium-robotics in /usr/local/lib/python3.11/dist-packages (1.3.1)\n",
             "Requirement already satisfied: mujoco<3.2.0,>=2.2.0 in /usr/local/lib/python3.11/dist-packages (from gymnasium-robotics) (3.1.6)\n",
-            "Requirement already satisfied: numpy>=1.21.0 in /usr/local/lib/python3.11/dist-packages (from gymnasium-robotics) (1.26.4)\n",
-            "Requirement already satisfied: gymnasium>=1.0.0 in /usr/local/lib/python3.11/dist-packages (from gymnasium-robotics) (1.0.0)\n",
+            "Requirement already satisfied: numpy>=1.21.0 in /usr/local/lib/python3.11/dist-packages (from gymnasium-robotics) (2.0.2)\n",
+            "Requirement already satisfied: gymnasium>=1.0.0 in /usr/local/lib/python3.11/dist-packages (from gymnasium-robotics) (1.1.1)\n",
             "Requirement already satisfied: PettingZoo>=1.23.0 in /usr/local/lib/python3.11/dist-packages (from gymnasium-robotics) (1.24.3)\n",
-            "Requirement already satisfied: Jinja2>=3.0.3 in /usr/local/lib/python3.11/dist-packages (from gymnasium-robotics) (3.1.5)\n",
+            "Requirement already satisfied: Jinja2>=3.0.3 in /usr/local/lib/python3.11/dist-packages (from gymnasium-robotics) (3.1.6)\n",
             "Requirement already satisfied: imageio in /usr/local/lib/python3.11/dist-packages (from gymnasium-robotics) (2.37.0)\n",
             "Requirement already satisfied: cloudpickle>=1.2.0 in /usr/local/lib/python3.11/dist-packages (from gymnasium>=1.0.0->gymnasium-robotics) (3.1.1)\n",
             "Requirement already satisfied: typing-extensions>=4.3.0 in /usr/local/lib/python3.11/dist-packages (from gymnasium>=1.0.0->gymnasium-robotics) (4.12.2)\n",
             "Requirement already satisfied: farama-notifications>=0.0.1 in /usr/local/lib/python3.11/dist-packages (from gymnasium>=1.0.0->gymnasium-robotics) (0.0.4)\n",
             "Requirement already satisfied: MarkupSafe>=2.0 in /usr/local/lib/python3.11/dist-packages (from Jinja2>=3.0.3->gymnasium-robotics) (3.0.2)\n",
             "Requirement already satisfied: absl-py in /usr/local/lib/python3.11/dist-packages (from mujoco<3.2.0,>=2.2.0->gymnasium-robotics) (1.4.0)\n",
-            "Requirement already satisfied: etils[epath] in /usr/local/lib/python3.11/dist-packages (from mujoco<3.2.0,>=2.2.0->gymnasium-robotics) (1.12.0)\n",
+            "Requirement already satisfied: etils[epath] in /usr/local/lib/python3.11/dist-packages (from mujoco<3.2.0,>=2.2.0->gymnasium-robotics) (1.12.2)\n",
             "Requirement already satisfied: glfw in /usr/local/lib/python3.11/dist-packages (from mujoco<3.2.0,>=2.2.0->gymnasium-robotics) (2.8.0)\n",
             "Requirement already satisfied: pyopengl in /usr/local/lib/python3.11/dist-packages (from mujoco<3.2.0,>=2.2.0->gymnasium-robotics) (3.1.9)\n",
             "Requirement already satisfied: pillow>=8.3.2 in /usr/local/lib/python3.11/dist-packages (from imageio->gymnasium-robotics) (11.1.0)\n",
@@ -208,13 +208,107 @@
             "Reading package lists... Done\n",
             "Building dependency tree... Done\n",
             "Reading state information... Done\n",
-            "xvfb is already the newest version (2:21.1.4-2ubuntu1.7~22.04.12).\n",
-            "0 upgraded, 0 newly installed, 0 to remove and 20 not upgraded.\n",
+            "The following additional packages will be installed:\n",
+            "  libfontenc1 libxfont2 libxkbfile1 x11-xkb-utils xfonts-base xfonts-encodings xfonts-utils\n",
+            "  xserver-common\n",
+            "The following NEW packages will be installed:\n",
+            "  libfontenc1 libxfont2 libxkbfile1 x11-xkb-utils xfonts-base xfonts-encodings xfonts-utils\n",
+            "  xserver-common xvfb\n",
+            "0 upgraded, 9 newly installed, 0 to remove and 29 not upgraded.\n",
+            "Need to get 7,814 kB of archives.\n",
+            "After this operation, 12.0 MB of additional disk space will be used.\n",
+            "Get:1 http://archive.ubuntu.com/ubuntu jammy/main amd64 libfontenc1 amd64 1:1.1.4-1build3 [14.7 kB]\n",
+            "Get:2 http://archive.ubuntu.com/ubuntu jammy/main amd64 libxfont2 amd64 1:2.0.5-1build1 [94.5 kB]\n",
+            "Get:3 http://archive.ubuntu.com/ubuntu jammy/main amd64 libxkbfile1 amd64 1:1.1.0-1build3 [71.8 kB]\n",
+            "Get:4 http://archive.ubuntu.com/ubuntu jammy/main amd64 x11-xkb-utils amd64 7.7+5build4 [172 kB]\n",
+            "Get:5 http://archive.ubuntu.com/ubuntu jammy/main amd64 xfonts-encodings all 1:1.0.5-0ubuntu2 [578 kB]\n",
+            "Get:6 http://archive.ubuntu.com/ubuntu jammy/main amd64 xfonts-utils amd64 1:7.7+6build2 [94.6 kB]\n",
+            "Get:7 http://archive.ubuntu.com/ubuntu jammy/main amd64 xfonts-base all 1:1.0.5 [5,896 kB]\n",
+            "Get:8 http://archive.ubuntu.com/ubuntu jammy-updates/main amd64 xserver-common all 2:21.1.4-2ubuntu1.7~22.04.13 [29.1 kB]\n",
+            "Get:9 http://archive.ubuntu.com/ubuntu jammy-updates/universe amd64 xvfb amd64 2:21.1.4-2ubuntu1.7~22.04.13 [863 kB]\n",
+            "Fetched 7,814 kB in 2s (4,380 kB/s)\n",
+            "Selecting previously unselected package libfontenc1:amd64.\n",
+            "(Reading database ... 125044 files and directories currently installed.)\n",
+            "Preparing to unpack .../0-libfontenc1_1%3a1.1.4-1build3_amd64.deb ...\n",
+            "Unpacking libfontenc1:amd64 (1:1.1.4-1build3) ...\n",
+            "Selecting previously unselected package libxfont2:amd64.\n",
+            "Preparing to unpack .../1-libxfont2_1%3a2.0.5-1build1_amd64.deb ...\n",
+            "Unpacking libxfont2:amd64 (1:2.0.5-1build1) ...\n",
+            "Selecting previously unselected package libxkbfile1:amd64.\n",
+            "Preparing to unpack .../2-libxkbfile1_1%3a1.1.0-1build3_amd64.deb ...\n",
+            "Unpacking libxkbfile1:amd64 (1:1.1.0-1build3) ...\n",
+            "Selecting previously unselected package x11-xkb-utils.\n",
+            "Preparing to unpack .../3-x11-xkb-utils_7.7+5build4_amd64.deb ...\n",
+            "Unpacking x11-xkb-utils (7.7+5build4) ...\n",
+            "Selecting previously unselected package xfonts-encodings.\n",
+            "Preparing to unpack .../4-xfonts-encodings_1%3a1.0.5-0ubuntu2_all.deb ...\n",
+            "Unpacking xfonts-encodings (1:1.0.5-0ubuntu2) ...\n",
+            "Selecting previously unselected package xfonts-utils.\n",
+            "Preparing to unpack .../5-xfonts-utils_1%3a7.7+6build2_amd64.deb ...\n",
+            "Unpacking xfonts-utils (1:7.7+6build2) ...\n",
+            "Selecting previously unselected package xfonts-base.\n",
+            "Preparing to unpack .../6-xfonts-base_1%3a1.0.5_all.deb ...\n",
+            "Unpacking xfonts-base (1:1.0.5) ...\n",
+            "Selecting previously unselected package xserver-common.\n",
+            "Preparing to unpack .../7-xserver-common_2%3a21.1.4-2ubuntu1.7~22.04.13_all.deb ...\n",
+            "Unpacking xserver-common (2:21.1.4-2ubuntu1.7~22.04.13) ...\n",
+            "Selecting previously unselected package xvfb.\n",
+            "Preparing to unpack .../8-xvfb_2%3a21.1.4-2ubuntu1.7~22.04.13_amd64.deb ...\n",
+            "Unpacking xvfb (2:21.1.4-2ubuntu1.7~22.04.13) ...\n",
+            "Setting up libfontenc1:amd64 (1:1.1.4-1build3) ...\n",
+            "Setting up xfonts-encodings (1:1.0.5-0ubuntu2) ...\n",
+            "Setting up libxkbfile1:amd64 (1:1.1.0-1build3) ...\n",
+            "Setting up libxfont2:amd64 (1:2.0.5-1build1) ...\n",
+            "Setting up x11-xkb-utils (7.7+5build4) ...\n",
+            "Setting up xfonts-utils (1:7.7+6build2) ...\n",
+            "Setting up xfonts-base (1:1.0.5) ...\n",
+            "Setting up xserver-common (2:21.1.4-2ubuntu1.7~22.04.13) ...\n",
+            "Setting up xvfb (2:21.1.4-2ubuntu1.7~22.04.13) ...\n",
+            "Processing triggers for man-db (2.10.2-1) ...\n",
+            "Processing triggers for fontconfig (2.13.1-4.2ubuntu5) ...\n",
+            "Processing triggers for libc-bin (2.35-0ubuntu3.8) ...\n",
+            "/sbin/ldconfig.real: /usr/local/lib/libumf.so.0 is not a symbolic link\n",
+            "\n",
+            "/sbin/ldconfig.real: /usr/local/lib/libtbb.so.12 is not a symbolic link\n",
+            "\n",
+            "/sbin/ldconfig.real: /usr/local/lib/libtbbbind_2_0.so.3 is not a symbolic link\n",
+            "\n",
+            "/sbin/ldconfig.real: /usr/local/lib/libur_loader.so.0 is not a symbolic link\n",
+            "\n",
+            "/sbin/ldconfig.real: /usr/local/lib/libtcm.so.1 is not a symbolic link\n",
+            "\n",
+            "/sbin/ldconfig.real: /usr/local/lib/libtbbbind.so.3 is not a symbolic link\n",
+            "\n",
+            "/sbin/ldconfig.real: /usr/local/lib/libur_adapter_level_zero.so.0 is not a symbolic link\n",
+            "\n",
+            "/sbin/ldconfig.real: /usr/local/lib/libtbbmalloc.so.2 is not a symbolic link\n",
+            "\n",
+            "/sbin/ldconfig.real: /usr/local/lib/libhwloc.so.15 is not a symbolic link\n",
+            "\n",
+            "/sbin/ldconfig.real: /usr/local/lib/libtcm_debug.so.1 is not a symbolic link\n",
+            "\n",
+            "/sbin/ldconfig.real: /usr/local/lib/libtbbbind_2_5.so.3 is not a symbolic link\n",
+            "\n",
+            "/sbin/ldconfig.real: /usr/local/lib/libur_adapter_opencl.so.0 is not a symbolic link\n",
+            "\n",
+            "/sbin/ldconfig.real: /usr/local/lib/libtbbmalloc_proxy.so.2 is not a symbolic link\n",
+            "\n",
             "Requirement already satisfied: imageio in /usr/local/lib/python3.11/dist-packages (2.37.0)\n",
-            "Requirement already satisfied: ffmpeg in /usr/local/lib/python3.11/dist-packages (1.4)\n",
-            "Requirement already satisfied: pyvirtualdisplay in /usr/local/lib/python3.11/dist-packages (3.0)\n",
-            "Requirement already satisfied: numpy in /usr/local/lib/python3.11/dist-packages (from imageio) (1.26.4)\n",
-            "Requirement already satisfied: pillow>=8.3.2 in /usr/local/lib/python3.11/dist-packages (from imageio) (11.1.0)\n"
+            "Collecting ffmpeg\n",
+            "  Downloading ffmpeg-1.4.tar.gz (5.1 kB)\n",
+            "  Preparing metadata (setup.py) ... \u001b[?25l\u001b[?25hdone\n",
+            "Collecting pyvirtualdisplay\n",
+            "  Downloading PyVirtualDisplay-3.0-py3-none-any.whl.metadata (943 bytes)\n",
+            "Requirement already satisfied: numpy in /usr/local/lib/python3.11/dist-packages (from imageio) (2.0.2)\n",
+            "Requirement already satisfied: pillow>=8.3.2 in /usr/local/lib/python3.11/dist-packages (from imageio) (11.1.0)\n",
+            "Downloading PyVirtualDisplay-3.0-py3-none-any.whl (15 kB)\n",
+            "Building wheels for collected packages: ffmpeg\n",
+            "  Building wheel for ffmpeg (setup.py) ... \u001b[?25l\u001b[?25hdone\n",
+            "  Created wheel for ffmpeg: filename=ffmpeg-1.4-py3-none-any.whl size=6082 sha256=a8c79031028e6bd4e9b3f658df13d4413338c06419641499f1ea01a488ef7ff7\n",
+            "  Stored in directory: /root/.cache/pip/wheels/56/30/c5/576bdd729f3bc062d62a551be7fefd6ed2f761901568171e4e\n",
+            "Successfully built ffmpeg\n",
+            "Installing collected packages: pyvirtualdisplay, ffmpeg\n",
+            "Successfully installed ffmpeg-1.4 pyvirtualdisplay-3.0\n"
           ]
         }
       ]
@@ -237,7 +331,7 @@
       "metadata": {
         "id": "DtS59dk_pq3r"
       },
-      "execution_count": null,
+      "execution_count": 3,
       "outputs": []
     },
     {
@@ -268,27 +362,7 @@
       "metadata": {
         "id": "HBTa20V7Cnrw"
       },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "### Create the environment"
-      ],
-      "metadata": {
-        "id": "vwft6NeNLMnj"
-      }
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "env = create_env()"
-      ],
-      "metadata": {
-        "id": "VoNEONqGI8Gf"
-      },
-      "execution_count": null,
+      "execution_count": 20,
       "outputs": []
     },
     {
@@ -325,35 +399,22 @@
       "metadata": {
         "id": "7ZD6OCBgcaBt"
       },
-      "execution_count": null,
+      "execution_count": 5,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
         "# # Run everything\n",
+        "# env = create_env()\n",
         "# frames = run_random_actions(env, steps=1000)\n",
         "# imageio.mimsave(\"random_actions_fetch.gif\", frames, fps=30)"
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "lRg-aK2ZjnF-",
-        "outputId": "4461f477-2168-4f38-ea77-ea47cb82358b"
+        "id": "lRg-aK2ZjnF-"
       },
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Observation space: Dict('achieved_goal': Box(-inf, inf, (3,), float64), 'desired_goal': Box(-inf, inf, (3,), float64), 'observation': Box(-inf, inf, (10,), float64))\n",
-            "Action space: Box(-1.0, 1.0, (4,), float32)\n",
-            "Saved animation to fetch.gif\n"
-          ]
-        }
-      ]
+      "execution_count": 6,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -665,6 +726,7 @@
         "    torch.manual_seed(seed)\n",
         "    np.random.seed(seed)\n",
         "    random.seed(seed)\n",
+        "    env_name = env.unwrapped.spec.id\n",
         "\n",
         "    # Create agent\n",
         "    obs_dict = env.reset()[0]\n",
@@ -751,7 +813,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "### Run training with DDPG with HER"
+        "### Run training with DDPG + HER"
       ],
       "metadata": {
         "id": "1t7rtH_pKmMh"
@@ -760,6 +822,7 @@
     {
       "cell_type": "code",
       "source": [
+        "env = create_env()\n",
         "agent, success_history = train_her(env)"
       ],
       "metadata": {
@@ -903,6 +966,7 @@
         "        combined_frames.append(np.array(combined_img))\n",
         "\n",
         "    # Save as GIF\n",
+        "    env_name = env.unwrapped.spec.id\n",
         "    imageio.mimsave(f\"{env_name}_multi_eval.gif\", combined_frames, fps=30)\n",
         "    print(f\"Saved multi-episode animation to {env_name}_multi_eval.gif\")\n",
         "\n",
@@ -929,6 +993,7 @@
     {
       "cell_type": "code",
       "source": [
+        "env = create_env()\n",
         "evaluate(agent, env, n_episodes=10)"
       ],
       "metadata": {
