Rewrite the evaluation function

--- a/Group project/Project_4.ipynb
+++ b/Group project/Project_4.ipynb
@@ -9,7 +9,7 @@
         "aju8u04MB-Bv"
       ],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyPVnr4sorIRsqPgf3B7+Kd/",
+      "authorship_tag": "ABX9TyPAL/Fxd5N6xClvZJLxHXIM",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -106,7 +106,7 @@
         "id": "-Wfi_xhngw0_",
         "outputId": "13e521ee-1c82-45db-b356-8c98a1229370"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -175,7 +175,7 @@
         "id": "34yIvql3mAWF",
         "outputId": "27e6fa92-efde-4483-c552-d2e73e61e545"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -331,7 +331,7 @@
       "metadata": {
         "id": "DtS59dk_pq3r"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -362,7 +362,7 @@
       "metadata": {
         "id": "HBTa20V7Cnrw"
       },
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -399,7 +399,7 @@
       "metadata": {
         "id": "7ZD6OCBgcaBt"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -413,7 +413,7 @@
       "metadata": {
         "id": "lRg-aK2ZjnF-"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -852,38 +852,68 @@
     {
       "cell_type": "code",
       "source": [
-        "def evaluate(agent, env, n_episodes=1, max_steps=50):\n",
+        "def evaluate(actor_model, env, n_episodes=10, max_steps=100):\n",
         "    \"\"\"\n",
-        "    Evaluates the agent on multiple episodes and creates a GIF showing all episodes side by side.\n",
+        "    Evaluates using just an actor model on multiple episodes and creates a single GIF\n",
+        "    with episodes playing one after another in sequence.\n",
         "\n",
         "    Args:\n",
-        "        agent: The trained agent\n",
-        "        env_name: Environment name\n",
-        "        n_episodes: Number of episodes to run and show in the GIF\n",
+        "        actor_model: The trained actor network\n",
+        "        env: The environment\n",
+        "        n_episodes: Number of episodes to run\n",
         "        max_steps: Maximum steps per episode\n",
         "\n",
         "    Returns:\n",
         "        success_rate: Fraction of successful episodes\n",
         "    \"\"\"\n",
-        "\n",
-        "    # Storage for all episodes\n",
-        "    all_episode_frames = []\n",
+        "    # Storage for sequential frames\n",
+        "    all_frames = []\n",
         "    successes = 0\n",
+        "    env_name = env.unwrapped.spec.id\n",
+        "    device = next(actor_model.parameters()).device  # Get the device of the model\n",
         "\n",
-        "    # Run all episodes\n",
+        "    # First get a sample frame to determine dimensions\n",
+        "    obs_dict, _ = env.reset()\n",
+        "    sample_frame = env.render()\n",
+        "    frame_height, frame_width = sample_frame.shape[0], sample_frame.shape[1]\n",
+        "\n",
+        "    # Run all episodes sequentially\n",
         "    for episode in range(n_episodes):\n",
         "        obs_dict, _ = env.reset()\n",
-        "\n",
-        "        episode_frames = []\n",
         "        episode_success = False\n",
+        "\n",
+        "        # Episode title frame\n",
+        "        title_frame = np.zeros((frame_height, frame_width, 3), dtype=np.uint8)\n",
+        "        pil_title = Image.fromarray(title_frame)\n",
+        "        draw = ImageDraw.Draw(pil_title)\n",
+        "        draw.text((frame_width//2 - 80, frame_height//2), f\"Episode {episode+1}\", fill=(255, 255, 255))\n",
+        "        all_frames.append(np.array(pil_title))\n",
+        "\n",
+        "        # 5 blank frames as a pause between episodes\n",
+        "        for _ in range(5):\n",
+        "            all_frames.append(title_frame.copy())\n",
         "\n",
         "        for t in range(max_steps):\n",
         "            # Render the current state\n",
         "            frame = env.render()\n",
-        "            episode_frames.append(frame)\n",
         "\n",
-        "            # Select action (no exploration noise)\n",
-        "            action = agent.select_action(obs_dict, noise=0)\n",
+        "            # Add episode number as overlay\n",
+        "            pil_frame = Image.fromarray(frame)\n",
+        "            draw = ImageDraw.Draw(pil_frame)\n",
+        "            draw.text((10, 10), f\"Episode {episode+1}\", fill=(255, 255, 255))\n",
+        "            frame = np.array(pil_frame)\n",
+        "\n",
+        "            # Add frame to full sequence\n",
+        "            all_frames.append(frame)\n",
+        "\n",
+        "            # Select action using actor model directly\n",
+        "            state = obs_dict[\"observation\"]\n",
+        "            goal = obs_dict[\"desired_goal\"]\n",
+        "            state_goal = np.concatenate([state, goal])\n",
+        "            state_goal = torch.FloatTensor(state_goal.reshape(1, -1)).to(device)\n",
+        "\n",
+        "            with torch.no_grad():\n",
+        "                action = actor_model(state_goal).cpu().data.numpy().flatten()\n",
         "\n",
         "            # Step environment\n",
         "            next_obs_dict, _, terminated, truncated, info = env.step(action)\n",
@@ -897,78 +927,48 @@
         "            if terminated or truncated:\n",
         "                break\n",
         "\n",
-        "        # Mark this episode as successful or not\n",
+        "        # Make sure we have at least one frame from this episode\n",
+        "        if len(all_frames) == 0:\n",
+        "            all_frames.append(title_frame.copy())\n",
+        "\n",
+        "        # Get the last frame for this episode\n",
+        "        last_frame = all_frames[-1].copy()\n",
+        "\n",
+        "        # Mark episode result with a summary frame\n",
+        "        pil_result = Image.fromarray(last_frame)\n",
+        "        draw = ImageDraw.Draw(pil_result)\n",
+        "        status = \"SUCCESS\" if episode_success else \"FAILURE\"\n",
+        "        color = (0, 255, 0) if episode_success else (255, 0, 0)\n",
+        "        # Draw larger text for visibility\n",
+        "        draw.text((frame_width//2 - 80, frame_height//2),\n",
+        "                  status, fill=color)\n",
+        "\n",
+        "        result_frame = np.array(pil_result)\n",
+        "        all_frames.append(result_frame)\n",
+        "\n",
+        "        # Add a few still frames at the end of each episode to see the result\n",
+        "        for _ in range(15):  # Hold the result for 15 frames\n",
+        "            all_frames.append(result_frame.copy())\n",
+        "\n",
+        "        # Track success\n",
         "        if episode_success:\n",
         "            successes += 1\n",
         "\n",
-        "        # Add this episode to our collection\n",
-        "        all_episode_frames.append((episode_frames, episode_success))\n",
-        "\n",
-        "    # Now create a combined GIF\n",
-        "    # Find the maximum length among all episodes\n",
-        "    max_length = max(len(frames) for frames, _ in all_episode_frames)\n",
-        "\n",
-        "    # Pad shorter episodes with their last frame\n",
-        "    for i in range(len(all_episode_frames)):\n",
-        "        frames, success = all_episode_frames[i]\n",
-        "        if len(frames) < max_length:\n",
-        "            # Pad with the last frame repeated\n",
-        "            last_frame = frames[-1]\n",
-        "            padding = [last_frame.copy() for _ in range(max_length - len(frames))]\n",
-        "            all_episode_frames[i] = (frames + padding, success)\n",
-        "\n",
-        "    # Create combined frames\n",
-        "    combined_frames = []\n",
-        "    frame_height, frame_width = all_episode_frames[0][0][0].shape[0], all_episode_frames[0][0][0].shape[1]\n",
-        "\n",
-        "    for frame_idx in range(max_length):\n",
-        "        # Create a row of frames for this timestep across all episodes\n",
-        "        pil_frames = []\n",
-        "\n",
-        "        for ep_idx, (frames, success) in enumerate(all_episode_frames):\n",
-        "            # Convert numpy array to PIL Image\n",
-        "            pil_frame = Image.fromarray(frames[frame_idx])\n",
-        "\n",
-        "            # Add text overlay\n",
-        "            draw = ImageDraw.Draw(pil_frame)\n",
-        "            # Add episode number\n",
-        "            draw.text((10, 10), f\"Episode {ep_idx+1}\", fill=(255, 255, 255))\n",
-        "            # Add success indicator at the end of the episode\n",
-        "            if frame_idx == max_length - 1:\n",
-        "                status = \"SUCCESS\" if success else \"FAILURE\"\n",
-        "                color = (0, 255, 0) if success else (255, 0, 0)\n",
-        "                draw.text((10, 30), status, fill=color)\n",
-        "\n",
-        "            pil_frames.append(pil_frame)\n",
-        "\n",
-        "        # Combine horizontally if <= 3 episodes, otherwise create a grid\n",
-        "        if n_episodes <= 3:\n",
-        "            # Combine horizontally\n",
-        "            combined_width = frame_width * len(pil_frames)\n",
-        "            combined_img = Image.new('RGB', (combined_width, frame_height))\n",
-        "            for i, img in enumerate(pil_frames):\n",
-        "                combined_img.paste(img, (i * frame_width, 0))\n",
-        "        else:\n",
-        "            # Create a grid (e.g., 2x3 for 5-6 episodes)\n",
-        "            rows = (n_episodes + 2) // 3  # Ceiling division to get number of rows\n",
-        "            cols = min(3, n_episodes)     # At most 3 columns\n",
-        "\n",
-        "            combined_width = frame_width * cols\n",
-        "            combined_height = frame_height * rows\n",
-        "            combined_img = Image.new('RGB', (combined_width, combined_height))\n",
-        "\n",
-        "            for i, img in enumerate(pil_frames):\n",
-        "                row = i // cols\n",
-        "                col = i % cols\n",
-        "                combined_img.paste(img, (col * frame_width, row * frame_height))\n",
-        "\n",
-        "        # Convert back to numpy array\n",
-        "        combined_frames.append(np.array(combined_img))\n",
+        "    # Check if all frames have the same shape\n",
+        "    shapes = set(frame.shape for frame in all_frames)\n",
+        "    if len(shapes) > 1:\n",
+        "        print(f\"Warning: Frames have different shapes: {shapes}\")\n",
+        "        # Resize all frames to the dimensions of the first frame\n",
+        "        target_shape = all_frames[0].shape\n",
+        "        for i in range(len(all_frames)):\n",
+        "            if all_frames[i].shape != target_shape:\n",
+        "                pil_frame = Image.fromarray(all_frames[i])\n",
+        "                pil_frame = pil_frame.resize((target_shape[1], target_shape[0]), Image.LANCZOS)\n",
+        "                all_frames[i] = np.array(pil_frame)\n",
         "\n",
         "    # Save as GIF\n",
-        "    env_name = env.unwrapped.spec.id\n",
-        "    imageio.mimsave(f\"{env_name}_multi_eval.gif\", combined_frames, fps=30)\n",
-        "    print(f\"Saved multi-episode animation to {env_name}_multi_eval.gif\")\n",
+        "    imageio.mimsave(f\"{env_name}_eval.gif\", all_frames, fps=30, loop=0)\n",
+        "    print(f\"Saved sequential animation to {env_name}_eval.gif\")\n",
         "\n",
         "    success_rate = successes / n_episodes\n",
         "    print(f\"Evaluation success rate: {success_rate:.2f}\")\n",
